# flipscript

./: .gitignore  ChangeLog  INSTALL  Makefile.am  NEWS  README  autogen.sh  build_debs.sh.in  configure.ac  flip  flip.py  flipscript.spec.in
commands/: Makefile.am  flip.py  mscp.py
debian/: Makefile.am  changelog.src  control.src  copyright  postinst
debian/source/: Makefile.am
docs/: Makefile.am  flip.xml  mscp.xml
expect/: Makefile.am  flip.exp  mscp.exp  template.exp
helpers/: Makefile.am
